<resources>
    <string name="app_name">lesson7</string>
    <string name="about">About</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="subitem1">SubItem1</string>
    <string name="subitem2">SubItem2</string>
    <string name="subitem3">SubItem3</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="dialog">Dialog</string>
    <string name="alertdialog">AlertDialog</string>
    <string name="timepicker">TimePicker</string>
    <string name="dialogview">Text</string>
    <string name="datepicker">DatePicker</string>
    <string name="fragmentdialog">FragmentDialog</string>
    <string name="dialog_message">ALARM!!!</string>
    <string name="dialog_title">AlertDialog</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="alert_dialog">AlertDialog</string>
    <string name="alert_dialog_message">Anything else?</string>
    <string name="nothing">\?</string>
</resources>