<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_menu_about"
        android:icon="@drawable/info"
        android:title="@string/about"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/item1"
        android:title="@string/item1"
        app:showAsAction="never" />
    <item
        android:id="@+id/item2"
        android:title="@string/item2"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/subitem1"
                android:title="@string/subitem1"
                app:showAsAction="never" />
            <item
                android:id="@+id/subitem2"
                android:title="@string/subitem2"
                app:showAsAction="never" />
            <item
                android:id="@+id/subitem3"
                android:title="@string/subitem3"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>